--- a/config.json.dist
+++ b/config.json.dist
@@ -5,6 +5,11 @@
     "user": "<user>",
     "password": "<password>"
   },
-
+  "pms": {
+    "host": "http://192.168.1.13",
+    "path": "/upload",
+    "user": "<user>",
+    "password": "<password>"
+  },
   "log_level": 7
 }
